[gd_scene load_steps=5 format=2]

[ext_resource path="res://particulas/HuesoBala.png" type="Texture" id=1]
[ext_resource path="res://balin.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.18516
height = 17.5406

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.56057
height = 16.2943

[node name="balin" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( -0.00173163, -0.0481222 )
scale = Vector2( 0.322248, 0.309593 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"bal",
]]
rotation = 0.872665
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="tiempolife" type="Timer" parent="."]
wait_time = 5.0

[node name="detecta" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detecta"]
rotation = 0.872665
shape = SubResource( 2 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="tiempolife" to="." method="_on_tiempolife_timeout"]
[connection signal="body_entered" from="detecta" to="." method="_on_detecta_body_entered"]
